<resources>
    <string name="app_name">Emergency(SOS)</string>
    <string name="login_btn">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="tv_signup">SIgnup</string>
    <string name="no_internet">No internet connecion</string>
    <string name="retrofit_failure">Something went wrong</string>
    <string name="invalid_answer">Invalid answer</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="pizza_price">$100</string>
    <string name="burger_price">$50</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>